Scrollbar fix

--- a/source/styles/main.css
+++ b/source/styles/main.css
@@ -1,12 +1,13 @@
 body {
     height:100%;
     padding:0;
-    margin:50px 0 0;
+    margin:0;
 }
 
 #content {
 	width:1250px;
 	margin:0 auto;
+	padding-top:70px;
 }
 
 #navbar {
